apps/routing/overlays/qa/ingress-kong-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r7-qa
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/plugins: r7-csv-import-request-size
spec:
  ingressClassName: kong
  rules:
    - host: qar7.retailtecno.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
